fix: replace List.of with Arrays.asList